# rust-scrabble

./: Cargo.toml  README.md
data/: prefixes.txt
src/: board.rs  input.rs  main.rs  plays.rs  racks.rs  score.rs  words.rs
