[package]
name = "scrabble"
version = "0.1.0"
authors = ["nealoriain"]
edition = "2018"
description = "A scrabble game"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
prettytable-rs = "^0.8"
colored = "2.0.0"
rand = "0.8.4"
